SN_Kubernetes_YAML/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
      - smartnotary.fr
    secretName: testsecret-tls
  rules:
  - host: smartnotary.fr
    http:
      paths:
      - path: /website(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rws-service
            port:
              number: 8000

      - path: /backend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ras-service
            port:
              number: 3000
      - path: /backend2ddoc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rqs-service
            port:
              number: 4000
      - path: /minio(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
      - path: /docmanagement(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rdms-service
            port:
              number: 5100
